# scrat

./: .gitignore  pyproject.toml
scrat/: alembic.ini  constants.py  models.py
scrat/alembic/: env.py
scrat/alembic/versions/: a15293c62afb_initial.py
scrat/bot/: app.py  context.py  tools.py
scrat/bot/commands/: base.py  command_list.py  last_battle_times.py  link.py  online_players.py  unlink.py
scrat/components/: argument_parser.py  config.py  database.py  link_cache.py  pydantic_argparse.py
scrat/web/: app.py
scrat/web/templates/: index.jinja2  layout.jinja2  link_error.jinja2  link_success.jinja2
tasks/: __init__.py  assets.py  start.py  top.py
tests/: test_pydantic_argparse.py
